[gd_scene load_steps=15 format=2]

[ext_resource path="res://Interactables/Base Interactable/Gesture Light Bulb.png" type="Texture" id=1]
[ext_resource path="res://Interactables/Base Interactable/Interactable.gd" type="Script" id=2]
[ext_resource path="res://Interactables/Base Interactable/Base.tres" type="Resource" id=3]
[ext_resource path="res://Interactables/Base Interactable/Gesture Feedback.gd" type="Script" id=4]
[ext_resource path="res://Interactables/Base Interactable/Start Gesture.tres" type="Animation" id=5]
[ext_resource path="res://Interactables/Lamp/Lamp Gesture Feedback.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Gesture Finished"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -150 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1 ), Vector2( 0.7, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 39.4164, 39.7821 )

[sub_resource type="Animation" id=4]
resource_local_to_scene = true
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=5]
resource_local_to_scene = true

[sub_resource type="Animation" id=6]
resource_local_to_scene = true
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=7]
resource_local_to_scene = true

[sub_resource type="Animation" id=8]
resource_local_to_scene = true

[node name="Base_Interactable" type="Node2D" groups=[
"Interactable",
]]
script = ExtResource( 2 )
dialogue_resource = ExtResource( 3 )

[node name="Light Bulb" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 2
texture = ExtResource( 1 )

[node name="Light" type="Sprite" parent="Light Bulb"]
visible = false
modulate = Color( 1, 1, 1, 0.403922 )
position = Vector2( 0, -158 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Gesture Start Animator" type="AnimationPlayer" parent="Light Bulb"]
"anims/Gesture Finished" = SubResource( 1 )
"anims/Start Gesture" = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="Interact Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact Area"]
shape = SubResource( 3 )

[node name="Gesture Feedback Handler" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Animation Player" type="AnimationPlayer" parent="."]
"anims/Gesture Feedback" = SubResource( 4 )
"anims/Hover Animation" = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Interact = SubResource( 7 )
"anims/Start Gesture" = ExtResource( 5 )
anims/Transition = SubResource( 8 )
[connection signal="input_event" from="Interact Area" to="." method="_on_Interact_Area_input_event"]
[connection signal="mouse_entered" from="Interact Area" to="." method="_on_Interact_Area_mouse_entered"]
[connection signal="mouse_exited" from="Interact Area" to="." method="_on_Interact_Area_mouse_exited"]
